--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,10 @@ body{
     margin: 0 auto;                                         /*pushing div to the center*/
     display: grid;                                          /*making div a grid*/
     grid-template-columns: repeat(6, 1fr);                  /*defines column number and width */        /* reapeat as the word says it repeats (first value column number, second width of column) */    
-    grid-template-rows: repeat(4, minmax(200px, auto));     /*defines row number and height */      /* reapeat as the word says it repeats (first value row number, second is minmax( first is minimum height, second is maximum)) */  
+    grid-template-rows: repeat(9, minmax(200px, auto));     /*defines row number and height */      /* reapeat as the word says it repeats (first value row number, second is minmax( first is minimum height, second is maximum)) */  
     grid-column-gap: 10px;                                  /*defines column gap (margin) */
     grid-row-gap: 10px;                                     /*defines row gap (margin) */
-    grid-gap: 10px;                                         /* grid column/row gap does not stack with grid gap */
+    /* grid-gap: 10px;                                         grid column/row gap does not stack with grid gap */
 }
 .content div{
     background-color: #3bbced;
@@ -48,4 +48,36 @@ body{
 .six{
     grid-row: 4;
     grid-column: 1 / 3;
+}
+
+/* new div group style */
+.nestHeading{
+    /* grid-column: 1 / 7; */
+    grid-column: span 7;                /* span means 1 */
+}
+.seven{
+    grid-column: 1 / 3;
+    grid-row: 6 / 8;
+}
+.eight ,.nine{
+    grid-column: 3 / 7;
+}
+.eleven ,.twelve{
+    grid-column: 4 / 7;
+}
+
+/* nested grid */
+
+.nestedGrid{
+    grid-column: 1 / 4;
+    grid-row: 8 / 10;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+.nestedGrid p{
+    border: 1px solid white;
+    margin: 0;
+    padding: 60px;
 }
