--- a/mosaic-layout/css/style.css
+++ b/mosaic-layout/css/style.css
@@ -46,3 +46,69 @@ body{
     transform: rotateZ(45deg) scale(0.7);
 }
 
+/* h2 style */
+
+h2{
+    margin: 50px 0 30px 0;
+    padding: 10px 30px;
+    border-radius: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: white;
+    color: tomato;
+    border: 2px solid tomato;
+    display: inline-block;
+}
+
+/* pickColor style */
+
+.pickColor{
+    max-width: 190px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(40px, auto);
+    gap: 10px;
+    
+
+}
+.pickColor div{
+    padding: 10px;
+    /* border: 1px solid black; */
+    cursor: pointer;
+}
+.originalColor{
+    background-color: rgb(6, 216, 125);
+}
+.secondColor{
+    background-color: rgb(247, 95, 0);
+}
+.thirdColor{
+    background-color: rgb(166, 35, 73);
+}
+.forthColor{
+    background-color: rgb(130, 112, 85);
+}
+.fifthColor{
+    background-color: rgb(81, 234, 234);
+}
+.sixthColor{
+    background-color: rgb(27, 75, 54);
+}
+.seventhColor{
+    background-color: rgb(0, 38, 81);
+}
+.eighthColor{
+    background-color: rgb(166, 108, 255);
+}
+.ninethColor{
+    background-color: rgb(255, 178, 0);
+}
+.tenthColor{
+    background-color: rgb(255, 157, 118);
+}
+.eleventhColor{
+    background-color: rgb(141, 141, 170);
+}
+.twelvethColor{
+    background-color: rgb(251, 53, 105);
+}
